<resources>
    <string name="app_name">emodiary</string>

    <!-- error message -->
    <string name="network_error">Network error</string>
    <string name="load_data_error">Failed to load data</string>
    <string name="unknown_error">Something went wrong. Please check your internet connection.</string>

    <!-- Form validation error message -->
    <string name="name_is_empty">Name is required</string>
    <string name="email_required_error">Email is required</string>
    <string name="email_invalid_error">Invalid email format</string>
    <string name="password_required_error">Password is required</string>
    <string name="password_length_error">Password must at least 6 characters</string>
    <string name="password_white_space_error">Password must not contain white spaces</string>
    <string name="password_upper_case_error">Password must contain one upper case letter</string>
    <string name="password_lower_case_error">Password must contain one lower case letter</string>
    <string name="password_number_error">Password must contain one digit number</string>

    <string name="emo_diary">EmoDiary</string>
    <string name="emodiary_sub">Your virtual emotional support system</string>
    <string name="title_menu_1">Virtual Emotional Support System</string>
    <string name="desc_menu_1">Tell me what you feel</string>
    <string name="mulai">Start</string>
    <string name="title_menu_2">Understanding your emotions</string>
    <string name="desc_menu_2">Get solutions based on your emotions through a selection of useful articles</string>
    <string name="title_menu_3">From anywhere and anytime</string>
    <string name="desc_menu_3">Wherever you are, EmoDiary is ready to help</string>
    <string name="masuk">Login</string>
    <string name="login_desc">Welcome back, please login with registered account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="masuk_dengan_google">Login with Google</string>
    <string name="daftar">Register</string>
    <string name="regist_desc">Join with EmoDiary and start to share your feelings</string>
    <string name="full_name">Full Name</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="masuk_sekarang">Login</string>
    <string name="belum_punya_akun_ayo">Don\'t have an account yet?</string>
    <string name="login_success_msg">Login Success</string>
    <string name="regist_success_msg">Register Success</string>
    <string name="foto_profil">Profile picture</string>
    <string name="date_diary">Sunday, 2 Juni 2022</string>
    <string name="diary_desc">Today I am very happy because I met a new friend on campus. My friends named Sinta, Jono and Gono…</string>
    <string name="diary_title">Meet new friends</string>
    <string name="mood_kamu_hari_ini">Your mood today</string>
    <string name="mood">Joy</string>
    <string name="say_halo">Hello 👋, %1s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="judul_diary">Diary Title</string>
    <string name="judul_hint">Enter diary title here</string>
    <string name="content_hint">Tell me what you\'re feelings</string>
    <string name="title_edit_dialog">Are you sure you want to cancel this changes?</string>
    <string name="title_contentEdit_dialog">Click yes to continue</string>
    <string name="regist_success_msg_desc">Please login to continue</string>

    <string name="back">back</string>
    <string name="next">next</string>

    <string name="dark">Dark</string>
    <string name="light">Light</string>

    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading…</string>
    <string name="article_banner">Good articles that keep you stay motivated</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_article">Article</string>
    <string name="settings">Settings</string>
    <string name="upload_on">Created at %1s</string>
    <string name="menu_delete">Delete</string>
    <string name="delete_success_msg">Diary has been successfully deleted</string>
    <string name="delete_failed_msg">Failed to delete diary</string>
    <string name="title_no_diary">You don\'t have any diary yet</string>
    <string name="desc_no_diary">Let\'s create one and share your feelings!</string>
    <string name="get_diary_fail">Failed to get diary</string>
    <string name="title_is_empty">Diary title is required</string>
    <string name="content_is_empty">Diary content is required</string>
    <string name="content_diary">Diary Content</string>

    <string name="update_diary">Save Changes</string>
    <string name="save">Save</string>
    <string name="add_diary_title">Create New Diary</string>
    <string name="add_diary_btn">Save</string>
    <string name="my_diary">My Diary</string>
    <string name="change_password">Change Password</string>
    <string name="name_label">Full Name</string>
    <string name="email_label">Email</string>
    <string name="old_pass_label">Old Password</string>
    <string name="new_pass_label">New Password</string>
    <string name="data_saved">Data saved successfully</string>
    <string name="data_saved_failed">Data failed to save</string>

    <string name="theme_setting">Theme</string>
    <string name="language_setting">Language</string>
    <string name="logout_btn">Logout</string>
    <string name="recommended_article">Recommended article for you</string>

    <!--  Emotions  -->
    <string name="sadness">Sadness</string>
    <string name="joy">Joy</string>
    <string name="anger">Anger</string>
    <string name="fear">Fear</string>
    <string name="love">Love</string>
    <string name="surprise">Surprise</string>

    <string name="emo_joy">😀</string>
    <string name="emo_sadness">😥</string>
    <string name="emo_anger">😠</string>
    <string name="emo_fear">😨</string>
    <string name="emo_love">🥰</string>
    <string name="emo_surprise">😯</string>

    <string name="title_delete_dialog">Are you sure you want to delete this diary?</string>
    <string name="content_delete_dialog">Click yes to continue</string>
    <string name="mood_kamu_sedang">Based on your latest diary, your mood is</string>
    <string name="unknown_emo">Unknown</string>
    <string name="emo_unknown">🤔</string>
    <string name="title_logout_msg">Are you sure you want to logout?</string>
    <string name="desc_logout_msg">Click yes to continue</string>
    <string name="permission">Permission not granted</string>

    <!-- Content Description -->
    <string name="cd_splashscreen">Splash screen illustration</string>
    <string name="cd_onboarding">Onboarding illustration</string>
</resources>