<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView app:strokeWidth="1dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:strokeColor="@color/emo_grey"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="16dp"
    android:layout_marginBottom="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:visibility="invisible"
            android:id="@+id/btn_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_more_vert"
            android:padding="0dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:text="@string/date_diary"/>
        <TextView
            android:id="@+id/tv_diary_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diary_title"
            card_view:layout_constraintTop_toBottomOf="@id/tv_date_diary"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_diary_desc"
            android:layout_width="match_parent"
            android:maxLines="3"
            android:layout_height="wrap_content"
            android:text="@string/diary_desc"
            card_view:layout_constraintTop_toBottomOf="@id/tv_diary_title"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
